[gd_scene load_steps=8 format=3 uid="uid://csdxqpywnbvlw"]

[ext_resource type="Script" path="res://UI/ui.gd" id="1_8ocxl"]
[ext_resource type="FontFile" uid="uid://bgr10ti7ub44u" path="res://Fonts/Silkscreen/Silkscreen-Regular.ttf" id="2_jak2h"]
[ext_resource type="PackedScene" uid="uid://mm0evdbjxitq" path="res://UI/Life.tscn" id="2_vksfb"]

[sub_resource type="LabelSettings" id="LabelSettings_v7qpq"]
font = ExtResource("2_jak2h")
font_size = 25
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_okat6"]
font = ExtResource("2_jak2h")
font_size = 80
outline_size = 40
outline_color = Color(0, 0, 0, 1)
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_2enuy"]
font = ExtResource("2_jak2h")
font_size = 40
outline_size = 40
outline_color = Color(0, 0, 0, 1)
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_ng7el"]
font = ExtResource("2_jak2h")
font_size = 23
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ocxl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Player1" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 440.0
offset_bottom = 48.0

[node name="TextureRect5" type="TextureRect" parent="Player1"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Player1"]
layout_mode = 2
text = "PLAYER 1 "
label_settings = SubResource("LabelSettings_v7qpq")
horizontal_alignment = 1
vertical_alignment = 3

[node name="TextureRect6" type="TextureRect" parent="Player1"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Life1" parent="Player1" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life2" parent="Player1" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life3" parent="Player1" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life4" parent="Player1" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life5" parent="Player1" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life6" parent="Player1" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life7" parent="Player1" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Player2" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -366.0
offset_bottom = 48.0
grow_horizontal = 0
alignment = 2

[node name="Life1" parent="Player2" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life2" parent="Player2" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life3" parent="Player2" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life4" parent="Player2" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life5" parent="Player2" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life6" parent="Player2" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Life7" parent="Player2" instance=ExtResource("2_vksfb")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="Player2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Player2"]
layout_mode = 2
size_flags_horizontal = 8
text = "PLAYER 2"
label_settings = SubResource("LabelSettings_v7qpq")
horizontal_alignment = 2
vertical_alignment = 3

[node name="TextureRect3" type="TextureRect" parent="Player2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="SPGameOver" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -13.0
offset_right = 53.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_okat6")
horizontal_alignment = 1
vertical_alignment = 3

[node name="ReturnToMM" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.0
offset_top = 71.0
offset_right = 264.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Any Key to 
Return to Main Menu"
label_settings = SubResource("LabelSettings_2enuy")
horizontal_alignment = 1
vertical_alignment = 3

[node name="SPWin" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -13.0
offset_right = 53.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU WIN!"
label_settings = SubResource("LabelSettings_okat6")
horizontal_alignment = 1
vertical_alignment = 3

[node name="TP1Win" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -13.0
offset_right = 53.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAYER 1 WINS!"
label_settings = SubResource("LabelSettings_okat6")
horizontal_alignment = 1
vertical_alignment = 3

[node name="TP2Win" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -13.0
offset_right = 53.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAYER 2 WINS!"
label_settings = SubResource("LabelSettings_okat6")
horizontal_alignment = 1
vertical_alignment = 3

[node name="Score1Container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_right = 229.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Score1Container"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Score1Container"]
layout_mode = 2
text = "SCORE:"
label_settings = SubResource("LabelSettings_ng7el")
vertical_alignment = 3

[node name="TextureRect2" type="TextureRect" parent="Score1Container"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Player1Score" type="Label" parent="Score1Container"]
layout_mode = 2
text = "1234566789"
label_settings = SubResource("LabelSettings_ng7el")
vertical_alignment = 3

[node name="Score2Container" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -229.0
offset_top = -24.0
grow_horizontal = 0
grow_vertical = 0

[node name="ScoreLabel" type="Label" parent="Score2Container"]
layout_mode = 2
text = "SCORE:"
label_settings = SubResource("LabelSettings_ng7el")
vertical_alignment = 3

[node name="TextureRect2" type="TextureRect" parent="Score2Container"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Player2Score" type="Label" parent="Score2Container"]
layout_mode = 2
text = "1234566789"
label_settings = SubResource("LabelSettings_ng7el")
vertical_alignment = 3

[node name="TextureRect" type="TextureRect" parent="Score2Container"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
